<resources>
    <string name="app_name">Car Diary</string>
    <string name="add_car">add Car</string>
    <string name="repairs">repairs</string>
    <string name="trips">trips</string>
    <string name="taxes">taxes</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="carModel">Model</string>
    <string name="carBrand">Brand</string>
    <string name="button">Button</string>
    <string name="Sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="attempts">No of attempt  remaining: </string>
    <string name="Sign_in">Sign in</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="model">Model</string>
    <string name="car">Car</string>
    <string name="fuel">Fuel</string>
    <string name="register_number">Register number</string>
    <string name="data_of_manufacture">DataOfManufacture</string>
    <string name="save_car">Save Car</string>
    <string name="full_fields">please  full all fields</string>


</resources>