<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.F95230.cardiary.AddNewCar"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/img_background">

        <EditText
            android:id="@+id/etCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:textColor="@color/white"
            android:gravity="center"
            android:hint="@string/car"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:hint="@string/model"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etFuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:hint="@string/fuel"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etDataOfManufacture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:hint="@string/data_of_manufacture"
            android:inputType="textCapSentences"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:hint="@string/register_number"
            android:inputType="text"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/saveCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="600dp"
            android:text="@string/save_car" />

    </RelativeLayout>

</ScrollView>

